# confin

./: CMakeLists.txt  Doxyfile  README.md  cfio_8h_source.html  cfself_8h.html  cfself_8h_source.html  cfstruct_8h_source.html  cfutils_8h_source.html  confin_8c.html  files.html  functions.html  globals_enum.html  main.c  struct____s__confin__header.html
.github/workflows/: cmake-multi-platform.yml
confin/: cfdef.h  cffmt.h  cfio.h  cfself.h  cfstruct.h  cftype.h  cfutils.h  confin.c
docs/: cfdef_8h_source.html  cffmt_8h.html  cffmt_8h_source.html  cfstruct_8h.html  cfstruct_8h_source.html  cftype_8h.html  cftype_8h_source.html  cfutils_8h_source.html  classes.html  dir_3d3c80ca963e89f97fa99389fb6d2442.html  doxygen_crawl.html  globals.html  globals_defs.html  index.html  struct____s__confin__entry.html  struct____s__confin__file-members.html  struct____s__confin__file.html  struct____s__confin__header-members.html
docs/html/: annotated.html  cfdef_8h.html  cfio_8h.html  cfutils_8h.html  functions_vars.html  globals_eval.html  globals_func.html  globals_type.html  menudata.js  struct____s__confin__entry-members.html
docs/html/search/: all_1.js  all_5.js  classes_0.js  defines_1.js  enumvalues_0.js  files_0.js  searchdata.js  variables_6.js
docs/search/: all_0.js  all_3.js  defines_0.js  enums_0.js  functions_0.js  typedefs_0.js  variables_0.js  variables_2.js  variables_4.js  variables_5.js
tests/: unit.c
